--- a/066_read_constr1/Makefile
+++ b/066_read_constr1/Makefile
@@ -1,7 +1,7 @@
 CPPFLAGS=-std=gnu++98 -pedantic -Wall -Werror -ggdb3
-test:
-	g++ -o test code.cpp
+code:
+	g++ -o code code.cpp
 
 .PHONY: clean
 clean:
-	rm -f test
+	rm -f code
