--- a/092_lls/Makefile
+++ b/092_lls/Makefile
@@ -1,2 +1,4 @@
 count: count.cpp ll.hpp
 	g++ -o count -ggdb3 -Wall -Werror -pedantic -std=gnu++98 count.cpp
+test: test-lls.cpp ll.hpp
+	g++ -o test -ggdb3 -Wall -Werror -pedantic -std=gnu++98 test-lls.cpp
