--- a/093_eval3/Makefile
+++ b/093_eval3/Makefile
@@ -1,9 +1,9 @@
 # Cite: eval2 Makefile
 CCFLAGS=--std=gnu++98 -pedantic -Wall -Werror -ggdb3
 PROGS=cyoa-step1 cyoa-step2 cyoa-step3 cyoa-step4
-OBJS=$(patsubst %,%.o,$(PROGS)) page.o
+OBJS=$(patsubst %,%.o,$(PROGS)) page.o story.o
 all: $(PROGS)
-cyoa-step%: cyoa-step%.o page.o
+cyoa-step%: cyoa-step%.o page.o story.o
 	g++ -o $@ $^
 %.o: %.cpp
 	g++ $(CFLAGS) -c $<
@@ -11,3 +11,4 @@ cyoa-step%: cyoa-step%.o page.o
 clean:
 	rm -f *~ $(PROGS) $(OBJS)
 page.o: page.hpp
+story.o: story.hpp
